fixed Navbar resizing on mobile

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -24,7 +24,7 @@
     padding: 9.0rem 15.1875rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .NavList{
     font-size: 20px;
